--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -74,7 +74,7 @@ a{
 
 .urb_qs-img {
     background-color: var(--color-gray-500);
-    background-image: url(./../image/qs.png);
+    background-image: var(--img-qs);
     background-position: center;
     width: 511px;
     height: 292.053px;
@@ -142,11 +142,11 @@ a{
 }
 
 .o4B-img {
-    background-image: url(./../image/producto_1.png);
+    background-image: var(--img-bg-O4B);
 }
 
 .kantan-img {
-    background-image: url(./../image/producto_2.png);
+    background-image: var(--img-bg-kantan);
 }
 
 .prod-image img {
@@ -436,6 +436,7 @@ a{
     align-items: center;
     align-self: stretch;
     border-radius: 4px 0 0 4px;
+    object-fit: cover;
 }
 
 .exp-content {
@@ -516,7 +517,7 @@ a{
         SECTION 7
 -------------------------*/
 .overlay-contact {
-    background-image: url(./../image/overlay_contact.png);
+    background-image:var(--img-overlay-contact);
     width: 50%;
     height: 100%;
     background-position: right;
